# mecon_lib

./: README.md  ROADMAP_v2.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
src/mecon/data/: aggregators.py  datafields.py  groupings.py  transactions.py
src/mecon/etl/: transformers.py
src/mecon/monitoring/: logging_utils.py
src/mecon/tags/: comparisons.py  custom_rules.py  process.py  rule_graphs.py  tag_helpers.py  tagging.py  transformations.py
src/mecon/utils/: calendar_utils.py  currencies.py  dataframe_transformers.py  instance_management.py
tests/: test_comparisons.py  test_datafields.py  test_etl_transformers.py  test_groupings.py  test_tag_helpers.py  test_tagging.py  test_tagging_process.py  test_transactions.py  test_transformations.py
