[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mecon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "forex-python==1.8",
    "networkx==3.4.2",
    "numpy>=1.26.0",
    "pandas>=3.0.2",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["mecon*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
]
